--- a/static/css/style-adaptive-min.css
+++ b/static/css/style-adaptive-min.css
@@ -141,7 +141,9 @@
         display:none
     }
     .menu__item{
-        display:flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
         flex-direction:column;
         align-items:center
     }
@@ -166,7 +168,9 @@
 @media(max-width:1130px){
     .main-block__body{
         position:relative;
-        display:flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
         flex-wrap:wrap
     }
 }
@@ -263,11 +267,15 @@
         width:25px
     }
     .main-3columns_mobile .slick-initialized .slick-slide{
-        display:flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
         justify-content:center
     }
     .main-3columns_mobile .slick-track{
-        display:flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
         align-items:center
     }
     .choice-block__body{
@@ -520,7 +528,9 @@
         gap:20px
     }
     .contacts_item{
-        display: flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
     }
     .contacts_item:nth-child(odd){
         justify-content: flex-start;
@@ -555,7 +565,9 @@
         grid-template-columns: 1fr;
     }
     .contacts_item{
-        display: flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; 
     }
     .contacts_item:nth-child(odd){
         justify-content: flex-start;
