--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -233,8 +233,8 @@ main.page{margin-top:68px}
 .services-block__grid{display: -webkit-box;display: -ms-flexbox;display: flex;flex-wrap:wrap;gap:20px}
 .category-list_description{font-family:"Inter";font-weight:400;font-size:16px;color:var(--article-text-color)}
 .page__service-offer .cases-block__title{margin-top:0}
-.offer_block-top{display: -webkit-box;display: -ms-flexbox;display: flex;align-items: center;gap: 20px}
-.offer_block-text,.offer_block-form{width:50%}
+.offer_block-top{display: -webkit-box;display: -ms-flexbox;display: flex;flex-direction: column; align-items: center;gap: 20px}
+.offer_block-text,.offer_block-form{width:100%}
 .offer_block-tariff{width:30%;display: -webkit-box;display: -ms-flexbox;display: flex!important;flex-direction:column;align-items:center;gap:20px;border:1px solid #3f3354;border-radius:5px;padding:10px;box-shadow:0 0 5px #3f3354;background:#1f0c37;margin:0 10px}
 .tariff_title{font-weight:400;text-transform:uppercase;text-align: center}
 .tariff_desc{font-size:14px;color:var(--article-text-color);text-align: center}
