--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1305,12 +1305,13 @@ margin-right: 30px;
   display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    flex-direction: column;
   align-items: center;
   gap: 20px;
 }
 .offer_block-text,
 .offer_block-form{
-  width:50%
+  width:100%
 }
 .offer_block-tariff{
   width:30%;
